--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -1,10 +1,9 @@
 .header {
-  height: 70px;
+  height: 50%;
   width: 100%;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid black;
-  background-color: lightgray;
 
   .header-logo {
     height: 100%;
