--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -29,6 +29,42 @@
         height: 100%;
         background-color: mediumpurple;
         margin: 0 auto;
+
+        .cards-container {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 100%;
+          height: 100%;
+
+          .card-center {
+            height: 5%;
+            width: 100%;
+
+            .card-center-icon {
+              width: 6%;
+              height: 85%;
+              border: 2px solid maroon;
+              margin: 0 auto;
+              border-radius: 100%;
+            }
+          }
+
+          .cards {
+            width: 100%;
+            flex-grow: 1;
+            background-color: mediumspringgreen;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .card {
+              width: 40%;
+              height: 100%;
+              background-color: navy;
+            }
+          }
+        }
       }
     }
 
