--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -83,8 +83,24 @@
 
       .profile {
         border: 1px solid black;
-        height: 50%;
+        height: fit-content;
         background-color: limegreen;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: 50%;
+        padding: 10px 0;
+
+        .profile-icon-container {
+          width: 40%;
+          margin: 0 auto;
+
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+          }
+        }
       }
 
       .news {
