--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -64,9 +64,22 @@
             .card {
               width: 40%;
               height: 100%;
-              background-color: navy;
+              background-color: lightskyblue;
               border-radius: 16%;
               z-index: 3;
+              vertical-align: middle;
+              border: 2px solid black;
+
+              .card-image-container {
+                margin: 0 auto;
+                width: 150px;
+                height: 100%;
+
+                img {
+                  width: 100%;
+                  height: 100%;
+                }
+              }
             }
           }
         }
