--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -27,7 +27,6 @@
       .main-container {
         width: 80%;
         height: 100%;
-        background-color: mediumpurple;
         margin: 0 auto;
 
         .cards-container {
@@ -36,6 +35,147 @@
           justify-content: space-between;
           width: 100%;
           height: 100%;
+
+          .card-big-container {
+            width: 100%;
+            height: 100%;
+
+            .card-big-blur {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              border-radius: inherit;
+              backdrop-filter: blur(10px);
+              -webkit-transition: backdrop-filter 2s ease;
+              -moz-transition: backdrop-filter 2s ease;
+              -o-transition: backdrop-filter 2s ease;
+              -ms-transition: backdrop-filter 2s ease;
+              transition: backdrop-filter 2s ease;
+
+              &.disabled {
+                backdrop-filter: unset;
+                width: 0;
+              }
+            }
+
+            .card-big-primary {
+              width: 50%;
+              height: 60%;
+              background-color: lightskyblue;
+              border-radius: 16%;
+              border: 2px solid black;
+              position: absolute;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-around;
+              z-index: 6;
+              -webkit-transition: all 2s ease;
+              -moz-transition: all 2s ease;
+              -o-transition: all 2s ease;
+              -ms-transition: all 2s ease;
+              transition: all 2s ease;
+
+              &.disabled {
+                z-index: 5;
+                transform: translate(20%, 10%);
+              }
+
+              .card-big-cover-container {
+                width: 60%;
+                height: 50%;
+                margin: 0 auto;
+
+                img {
+                  width: 100%;
+                  height: 100%;
+                }
+              }
+
+              .card-big-controls {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                padding: 0 20px;
+                vertical-align: middle;
+                height: 20%;
+
+                .card-big-control {
+                  width: 30%;
+                  height: 100%;
+                  vertical-align: middle;
+
+                  img {
+                    width: 100%;
+                    height: 40%;
+                    cursor: pointer;
+                  }
+                }
+              }
+            }
+
+            .card-big-secondary {
+              width: 50%;
+              height: 60%;
+              background-color: lightsalmon;
+              border-radius: 16%;
+              border: 2px solid black;
+              position: absolute;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              z-index: 6;
+              -webkit-transition: all 2s ease;
+              -moz-transition: all 2s ease;
+              -o-transition: all 2s ease;
+              -ms-transition: all 2s ease;
+              transition: all 2s ease;
+
+              &.disabled {
+                z-index: 5;
+                transform: translate(20%, 10%);
+              }
+
+              .card-big-table {
+                width: 90%;
+                height: 90%;
+                border-radius: 3%;
+                overflow-y: scroll;
+
+                &::-webkit-scrollbar {
+                  width: 12px;
+                }
+
+                &::-webkit-scrollbar-track {
+                  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+                  border-radius: 10px;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                  border-radius: 10px;
+                  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+                }
+
+                .track {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  padding: 10px 20px;
+                  border-bottom: 1px solid;
+
+                  .track-info {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                  }
+
+                  .track-duration {
+                    vertical-align: middle;
+                    height: 100%;
+                  }
+                }
+              }
+            }
+          }
 
           .card-center {
             height: 5%;
