--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -16,11 +16,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: lightslategrey;
 
     .main-space {
-      border: 1px solid black;
-      background-color: lightcyan;
+      /*border: 1px solid black;
+      background-color: lightcyan;*/
       width: 80vw;
       padding: 10% 0;
 
@@ -229,20 +228,27 @@
     .rightpanel {
       width: 20vw;
       height: 50vh;
-      border: 1px solid black;
       display: flex;
       flex-direction: column;
-      background-color: lightpink;
+      margin-right: 5px;
 
       .profile {
         border: 1px solid black;
         height: fit-content;
         background-color: limegreen;
+        border-radius: 8px;
         display: flex;
         flex-direction: column;
         text-align: center;
         height: 50%;
         padding: 10px 0;
+        margin-bottom: 10px;
+        cursor: default;
+        -webkit-transition: all 2s ease;
+        -moz-transition: all 2s ease;
+        -o-transition: all 2s ease;
+        -ms-transition: all 2s ease;
+        transition: all 2s ease;
 
         .profile-icon-container {
           width: 40%;
@@ -250,8 +256,32 @@
 
           img {
             width: 100%;
-            height: 100%;
             border-radius: 50%;
+          }
+        }
+
+        &.minified {
+          display: flex;
+          flex-direction: row;
+          text-align: center;
+          height: 30px;
+          padding: 5px 5px;
+
+          .profile-icon-container {
+            width: 30%;
+          }
+
+          .profile-info {
+            width: 100%;
+            padding: 5px 0;
+
+            p {
+              margin: 0;
+            }
+
+            .profile-additional {
+              display: none;
+            }
           }
         }
       }
@@ -260,6 +290,7 @@
         border: 1px solid black;
         background-color: lightsteelblue;
         height: 50%;
+        border-radius: 8px;
       }
     }
   }
