--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -1,55 +1,63 @@
-.main {
-  height: 100vh;
-  width: 100vw;
+@mixin animation($type, $sec) {
+  -webkit-transition: $type $sec ease;
+  -moz-transition: $type $sec ease;
+  -o-transition: $type $sec ease;
+  -ms-transition: $type $sec ease;
+  transition: $type $sec ease;
+}
+
+@mixin flexeddiv($flexdirection, $justifycontent) {
   display: flex;
-  flex-direction: column;
+  flex-direction: $flexdirection;
+  justify-content: $justifycontent;
+}
+
+@mixin setwidthandheight($width, $height) {
+  width: $width;
+  height: $height;
+}
+
+@mixin setborderwithradius($border, $radius) {
+  border: $border;
+  border-radius: $radius;
+}
+
+.main {
+  @include setwidthandheight(100vw, 100vh);
+  @include flexeddiv(column, unset);
 
   .toppart {
-    height: 140px;
     background-color: linen;
     margin-bottom: 20px;
   }
 
   .main-part {
-    width: 100%;
+    @include setwidthandheight(100%, unset);
     flex-grow: 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    @include flexeddiv(row, space-between);
 
     .main-space {
-      /*border: 1px solid black;
-      background-color: lightcyan;*/
-      width: 80vw;
+      @include setwidthandheight(80vw, unset);
       padding: 10% 0;
 
       .main-container {
-        width: 80%;
-        height: 100%;
+        @include setwidthandheight(80%, 100%);
         margin: 0 auto;
 
         .cards-container {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          width: 100%;
-          height: 100%;
+          @include flexeddiv(column, space-between);
+          @include setwidthandheight(100%, 100%);
 
           .card-big-container {
-            width: 100%;
-            height: 100%;
+            @include setwidthandheight(100%, 100%);
 
             .card-big-blur {
               position: absolute;
-              width: 100%;
-              height: 100%;
-              border-radius: inherit;
+              @include setwidthandheight(100%, 100%);
+              @include setborderwithradius(unset, inherit);
               backdrop-filter: blur(10px);
-              -webkit-transition: backdrop-filter 2s ease;
-              -moz-transition: backdrop-filter 2s ease;
-              -o-transition: backdrop-filter 2s ease;
-              -ms-transition: backdrop-filter 2s ease;
-              transition: backdrop-filter 2s ease;
+              @include animation(backdrop-filter, 2s);
+              cursor: pointer;
 
               &.disabled {
                 backdrop-filter: unset;
@@ -58,21 +66,13 @@
             }
 
             .card-big-primary {
-              width: 50%;
-              height: 60%;
+              @include setwidthandheight(50%, 60%);
               background-color: lightskyblue;
-              border-radius: 16%;
-              border: 2px solid black;
+              @include setborderwithradius(2px solid black, 16%);
               position: absolute;
-              display: flex;
-              flex-direction: column;
-              justify-content: space-around;
+              @include flexeddiv(column, space-around);
               z-index: 6;
-              -webkit-transition: all 2s ease;
-              -moz-transition: all 2s ease;
-              -o-transition: all 2s ease;
-              -ms-transition: all 2s ease;
-              transition: all 2s ease;
+              @include animation(all, 2s);
 
               &.disabled {
                 z-index: 5;
@@ -80,32 +80,26 @@
               }
 
               .card-big-cover-container {
-                width: 60%;
-                height: 50%;
+                @include setwidthandheight(60%, 50%);
                 margin: 0 auto;
 
                 img {
-                  width: 100%;
-                  height: 100%;
+                  @include setwidthandheight(100%, 100%);
                 }
               }
 
               .card-big-controls {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
+                @include flexeddiv(row, space-around);
                 padding: 0 20px;
                 vertical-align: middle;
-                height: 20%;
+                border-radius: 20%;
 
                 .card-big-control {
-                  width: 30%;
-                  height: 100%;
+                  @include setwidthandheight(30%, 100%);
                   vertical-align: middle;
 
                   img {
-                    width: 100%;
-                    height: 40%;
+                    @include setwidthandheight(100%, 40%);
                     cursor: pointer;
                   }
                 }
@@ -113,21 +107,14 @@
             }
 
             .card-big-secondary {
-              width: 50%;
-              height: 60%;
+              @include setwidthandheight(50%, 60%);
               background-color: lightsalmon;
-              border-radius: 16%;
-              border: 2px solid black;
+              @include setborderwithradius(2px solid black, 16%);
               position: absolute;
-              display: flex;
-              justify-content: center;
+              @include flexeddiv(unset, center);
               align-items: center;
               z-index: 6;
-              -webkit-transition: all 2s ease;
-              -moz-transition: all 2s ease;
-              -o-transition: all 2s ease;
-              -ms-transition: all 2s ease;
-              transition: all 2s ease;
+              @include animation(all, 2s);
 
               &.disabled {
                 z-index: 5;
@@ -135,41 +122,36 @@
               }
 
               .card-big-table {
-                width: 90%;
-                height: 90%;
-                border-radius: 3%;
+                @include setwidthandheight(90%, 90%);
+                @include setborderwithradius(unset, 3%);
                 overflow-y: scroll;
 
                 &::-webkit-scrollbar {
-                  width: 12px;
+                  @include setwidthandheight(12px, unset);
                 }
 
                 &::-webkit-scrollbar-track {
                   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-                  border-radius: 10px;
+                  @include setborderwithradius(unset, 10px);
                 }
 
                 &::-webkit-scrollbar-thumb {
-                  border-radius: 10px;
+                  @include setborderwithradius(unset, 10px);
                   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
                 }
 
                 .track {
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: space-between;
+                  @include flexeddiv(row, space-between);
                   padding: 10px 20px;
                   border-bottom: 1px solid;
 
                   .track-info {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-around;
+                    @include flexeddiv(column, space-around);
                   }
 
                   .track-duration {
                     vertical-align: middle;
-                    height: 100%;
+                    border-radius: 100%;
                   }
                 }
               }
@@ -177,46 +159,37 @@
           }
 
           .card-center {
-            height: 5%;
-            width: 100%;
+            @include setwidthandheight(100%, 5%);
             z-index: 3;
 
             .card-center-icon {
-              width: 6%;
-              height: 85%;
-              border: 2px solid maroon;
+              @include setwidthandheight(6%, 85%);
               background-color: mediumpurple;
               margin: 0 auto;
-              border-radius: 100%;
+              @include setborderwithradius(2px solid maroon, 100%);
               z-index: 3;
             }
           }
 
           .cards {
-            width: 100%;
+            @include setwidthandheight(100%, unset);
             flex-grow: 1;
             background-color: mediumspringgreen;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+            @include flexeddiv(row, space-between);
 
             .card {
-              width: 40%;
-              height: 100%;
+              @include setwidthandheight(40%, 100%);
               background-color: lightskyblue;
-              border-radius: 16%;
               z-index: 3;
               vertical-align: middle;
-              border: 2px solid black;
+              @include setborderwithradius(2px solid black, 16%);
 
               .card-image-container {
                 margin: 0 auto;
-                width: 150px;
-                height: 100%;
+                @include setwidthandheight(150px, 100%);
 
                 img {
-                  width: 100%;
-                  height: 100%;
+                  @include setwidthandheight(100%, 100%);
                 }
               }
             }
@@ -226,78 +199,93 @@
     }
 
     .rightpanel {
-      width: 20vw;
-      height: 50vh;
-      display: flex;
-      flex-direction: column;
+      @include setwidthandheight(20vw, 50vh);
+      @include flexeddiv(column, unset);
       margin-right: 5px;
+      font-size: 11pt;
 
       .profile {
-        border: 1px solid black;
-        height: fit-content;
         background-color: limegreen;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
+        @include setborderwithradius(1px solid black, 8px);
+        @include flexeddiv(column, unset);
         text-align: center;
-        height: 50%;
         padding: 10px 0;
         margin-bottom: 10px;
         cursor: default;
-        -webkit-transition: all 2s ease;
-        -moz-transition: all 2s ease;
-        -o-transition: all 2s ease;
-        -ms-transition: all 2s ease;
-        transition: all 2s ease;
+        @include animation(all, 2s);
+
+        .profile-info {
+          @include flexeddiv(column, space-around);
+          border-radius: 100%;
+
+          .profile-info-minifying {
+            @include animation(all, 2s);
+          }
+        }
 
         .profile-icon-container {
-          width: 40%;
           margin: 0 auto;
+          @include animation(all, 2s);
 
           img {
-            width: 100%;
-            border-radius: 50%;
+            @include setwidthandheight(70px, 70px);
+            @include setborderwithradius(unset, 100%);
+            @include animation(all, 2s);
+          }
+
+          .profile-info-minified {
+            margin: 5px 0px;
+            @include setwidthandheight(0, 0);
+            opacity: 0;
           }
         }
 
         &.minified {
-          display: flex;
-          flex-direction: row;
           text-align: center;
-          height: 30px;
-          padding: 5px 5px;
+          border-radius: 30px;
+          padding: 2px 5px;
 
           .profile-icon-container {
-            width: 30%;
+            margin: 0 0 0 0;
+            @include flexeddiv(unset, space-around);
+
+            .profile-info-minified {
+              border-radius: 100%;
+              line-height: 200%;
+              margin: 0;
+              @include setwidthandheight(100%, 100%);
+              opacity: 100%;
+              @include animation(opacity, 2s);
+            }
+          }
+
+          img {
+            @include setwidthandheight(30px, 30px);
+            @include setborderwithradius(unset, 50%);
           }
 
           .profile-info {
-            width: 100%;
+            @include setwidthandheight(100%, unset);
             padding: 5px 0;
 
-            p {
-              margin: 0;
-            }
-
-            .profile-additional {
-              display: none;
+            .profile-info-minifying {
+              border-radius: 0;
+              opacity: 0%;
             }
           }
         }
       }
 
       .news {
-        border: 1px solid black;
         background-color: lightsteelblue;
-        height: 50%;
-        border-radius: 8px;
+        @include setwidthandheight(unset, 50%);
+        @include setborderwithradius(1px solid black, 8px);
       }
     }
   }
 
   .footer {
-    height: 20px;
-    width: 100%;
+    @include setwidthandheight(100%, 20px);
     border-top: 1px solid black;
     background-color: lightgray;
   }
