--- a/client/src/components/card-search/card-search.styles.scss
+++ b/client/src/components/card-search/card-search.styles.scss
@@ -88,6 +88,18 @@
       width: 20%;
       border-right: 1px solid black;
       @include animation(all, 5s);
+      -webkit-appearance: div;
+      -moz-appearance: div;
+      appearance: div;
+
+      .searchbar-image-button {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border: 0;
+        outline: none;
+        cursor: pointer;
+      }
     }
 
     .searchbar-query {
