added test functionality

--- a/client/src/components/card-search/card-search.styles.scss
+++ b/client/src/components/card-search/card-search.styles.scss
@@ -30,7 +30,7 @@
   border-radius: $radius;
 }
 
-.card-playlist {
+.card-search {
   @include setwidthandheight(100%, 100%);
   background-color: lightsalmon;
   @include setborderwithradius(2px solid black, 52px);
