--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -84,6 +84,10 @@
               }
             }
           }
+
+          .react-card-back {
+            transform-style: flat !important;
+          }
         }
       }
     }
