--- a/client/src/components/card-search/card-search.styles.scss
+++ b/client/src/components/card-search/card-search.styles.scss
@@ -46,6 +46,7 @@
 
   &.searched {
     @include flexeddiv(column, flex-start);
+    overflow-y: hidden;
 
     .placeholder {
       height: 0;
@@ -117,6 +118,94 @@
         font-size: x-large;
         outline: none;
         background-color: transparent;
+      }
+    }
+  }
+
+  .searchlist {
+    width: 100%;
+    height: 0;
+    @include animation(all, 2s);
+
+    &.searched {
+      height: 100%;
+      @include animation(all, 2s);
+
+      .searchlist-buttons {
+        display: flex;
+      }
+    }
+
+    .searchlist-buttons {
+      width: 100%;
+      height: 10%;
+      border-bottom: black solid 2px;
+      display: none;
+      justify-content: space-around;
+
+      .button {
+        background-color: cadetblue;
+        width: 80px;
+        cursor: pointer;
+        margin: 5px 0px;
+        border: black solid 2px;
+        border-radius: 8px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        &:hover {
+          background-color: lightblue;
+        }
+
+        &.selected {
+          background-color: blue;
+        }
+      }
+    }
+    .searchlist-list {
+      width: 100%;
+      height: 90%;
+
+      .searchlist-tracks {
+        overflow-y: scroll;
+        margin: 10px 0px;
+        height: 80%;
+
+        &::-webkit-scrollbar {
+          @include setwidthandheight(12px, unset);
+        }
+
+        &::-webkit-scrollbar-track {
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          @include setborderwithradius(unset, 10px);
+        }
+
+        &::-webkit-scrollbar-thumb {
+          @include setborderwithradius(unset, 10px);
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        }
+      }
+
+      .track {
+        @include flexeddiv(row, space-between);
+        padding: 10px 20px;
+        border-bottom: 1px solid;
+        cursor: pointer;
+
+        &:hover {
+          background-color: rgb(248, 196, 176);
+        }
+
+        .track-info {
+          @include flexeddiv(column, space-around);
+        }
+
+        .track-duration {
+          vertical-align: middle;
+          border-radius: 100%;
+        }
       }
     }
   }
