--- a/client/src/components/mainmenu/mainmenu.styles.scss
+++ b/client/src/components/mainmenu/mainmenu.styles.scss
@@ -42,7 +42,7 @@
 
       background-repeat: no-repeat;
       background-position: center;
-      background-size: contain;
+      background-size: 70%;
       cursor: pointer;
       @include animation(background-color, 0.5s);
 
