--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -67,6 +67,13 @@
           @include flexeddiv(column, space-between);
           @include setwidthandheight(100%, 100%);
 
+          .auth {
+            .card-big-primary, .card-big-secondary {
+              @include setwidthandheight(55%, 55%);
+              cursor: pointer;
+            }
+          }
+
           .card-center {
             @include setwidthandheight(100%, 5%);
             z-index: 3;
