--- a/client/src/components/card-signup/card-signup.styles.scss
+++ b/client/src/components/card-signup/card-signup.styles.scss
@@ -28,4 +28,11 @@
   @include setborderwithradius(2px solid black, 52px);
   @include flexeddiv(column, space-around);
 
+  form {
+    margin:  auto 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 50%;
+  }
 }
