added custombutton and forminput

--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -68,9 +68,9 @@
           @include setwidthandheight(100%, 100%);
 
           .auth {
-            .card-big-primary, .card-big-secondary {
+            .card-big-primary,
+            .card-big-secondary {
               @include setwidthandheight(55%, 55%);
-              cursor: pointer;
             }
           }
 
