--- a/client/src/components/card-signup/card-signup.styles.scss
+++ b/client/src/components/card-signup/card-signup.styles.scss
@@ -33,6 +33,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 85%;
+    height: 95%;
+
+    .error {
+      width: 100%;
+      text-align: center;
+      color: red;
+      font-style: italic;
+    }
   }
 }
