--- a/client/src/components/card-profile/card-profile.styles.scss
+++ b/client/src/components/card-profile/card-profile.styles.scss
@@ -33,14 +33,18 @@
   left: -100%;
 
   .card-profile-main {
-    @include flexeddiv(column, space-around);
+    @include flexeddiv(column, space-evenly);
     @include setwidthandheight(70%, 100%);
 
     .card-profile-image {
+      width: 200px;
+      height: 200px;
+      margin: 0 auto;
+      border-radius: 50%;
+      border: 3px solid black;
+      overflow: hidden;
       img {
         @include setwidthandheight(100%, 100%);
-        border-radius: 50%;
-        border: 3px solid black;
       }
     }
 
