--- a/client/src/components/forminput/forminput.styles.scss
+++ b/client/src/components/forminput/forminput.styles.scss
@@ -31,6 +31,16 @@ $main-color: black;
     &:focus ~ .forminputlabel {
       @include shrinkLabel();
     }
+
+    &:disabled {
+      background-color: transparent;
+      border: none;
+    }
+
+    &.border {
+      border: 1px solid black;
+      cursor: pointer;
+    }
   }
 
   input[type='password'] {
