--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -6,9 +6,14 @@
   border-bottom: 1px solid black;
 
   .header-logo {
+    padding: 0 25px;
+    width: 40px;
     height: 100%;
-    width: 70px;
-    padding: 25px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .header-links {
