--- a/client/src/components/custombutton/custombutton.styles.scss
+++ b/client/src/components/custombutton/custombutton.styles.scss
@@ -9,6 +9,7 @@
   background-color: orange;
   color: white;
   border: none;
+  border-radius: 6px;
   cursor: pointer;
   display: flex;
   justify-content: center;
