--- a/client/src/components/forminput/forminput.styles.scss
+++ b/client/src/components/forminput/forminput.styles.scss
@@ -9,7 +9,6 @@ $main-color: black;
 
 .group {
   position: relative;
-  /*margin: 45px 0;*/
 
   .forminput {
     background: none;
@@ -20,9 +19,8 @@ $main-color: black;
     display: block;
     width: 100%;
     border: none;
-    border-radius: 0;
+    border-radius: 6px;
     border-bottom: 1px solid $sub-color;
-    /*margin: 25px 0;*/
 
     &:focus {
       outline: none;
