--- a/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
+++ b/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
@@ -28,6 +28,7 @@
   @include setborderwithradius(2px solid black, 52px);
   @include flexeddiv(unset, center);
   align-items: center;
+  margin: 0 5px 0 2.5px;
 
   .card-big-table {
     @include setwidthandheight(90%, 90%);
