--- a/client/src/components/card-addtrack/card-addtrack.styles.scss
+++ b/client/src/components/card-addtrack/card-addtrack.styles.scss
@@ -23,12 +23,12 @@
 }
 
 .card-admin-main-addtrack {
-  @include setwidthandheight(100%, 100%);
+  @include setwidthandheight(100%, 97%);
   background-color: lightsalmon;
   @include setborderwithradius(2px solid black, 30px);
   @include flexeddiv(unset, center);
   align-items: center;
-  margin: 0 5px 0 2.5px;
+  margin: 28px 5px 0 2.5px;
 
   .forminput {
     margin: 16px 0;
