--- a/client/src/components/profile/profile.styles.scss
+++ b/client/src/components/profile/profile.styles.scss
@@ -75,3 +75,14 @@
     @include setborderwithradius(0px solid black, 8px);
   }
 }
+
+.profile-panel {
+  .small-btn {
+    @include setwidthandheight(32px, 32px);
+    margin-top: 0;
+    right: 10px;
+    margin-right: 20vw;
+    z-index: 0;
+    border-radius: 9px;
+  }
+}
