--- a/client/src/components/shared/small-button/small-button.styles.scss
+++ b/client/src/components/shared/small-button/small-button.styles.scss
@@ -27,11 +27,17 @@
   background-size: 70% 80%;
   background-position: center;
   background-repeat: no-repeat;
-  @include animation(background-color, 0.5s);
+  @include animation(all, 0.5s);
   background-image: url('http://localhost:3000/images/gear.svg');
   z-index: 999;
 
   &:hover {
     background-color: rgb(247, 198, 178);
+  }
+
+  &.hidden {
+    //opacity: 0;
+    width: 0 !important;
+    border-width: 0;
   }
 }
