--- a/client/src/components/card-userlist/card-userlist.styles.scss
+++ b/client/src/components/card-userlist/card-userlist.styles.scss
@@ -233,3 +233,12 @@
     color: green;
   }
 }
+
+.track-menu-item {
+  width: 40%;
+  background-position: right;
+  background-size: 45% 51%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
