--- a/client/src/components/card-userlist/card-userlist.styles.scss
+++ b/client/src/components/card-userlist/card-userlist.styles.scss
@@ -30,10 +30,12 @@
   border-radius: $radius;
 }
 
-.card-search {
+.card-userlist {
   @include setwidthandheight(100%, 100%);
   background-color: lightsalmon;
-  @include setborderwithradius(2px solid black, 52px);
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 52px;
   @include flexeddiv(column, flex-start);
   align-items: center;
   @include animation(all, 5s);
@@ -168,7 +170,7 @@
       width: 100%;
       height: 90%;
 
-      .searchlist-tracks {
+      .searchlist-users {
         overflow-y: scroll;
         margin: 10px 0px;
         height: 80%;
@@ -186,125 +188,68 @@
           @include setborderwithradius(unset, 10px);
           -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
         }
+
+        .user-item {
+          @include flexeddiv(row, space-between);
+          padding: 10px 20px;
+          border-bottom: 1px solid;
+          cursor: pointer;
+          height: 60px;
+
+          &:hover {
+            background-color: rgb(248, 196, 176);
+          }
+
+          .user-info {
+            @include flexeddiv(column, space-around);
+            .user {
+              &.admin {
+                color: blue;
+              }
+              &.subscribed {
+                color: green;
+              }
+            }
+          }
+
+          .user-duration {
+            width: 25%;
+            text-align: right;
+            vertical-align: middle;
+            border-radius: 100%;
+          }
+
+          &:hover {
+            .user-menu {
+              display: flex;
+            }
+            .user-duration {
+              display: none;
+            }
+          }
+
+          .user-menu {
+            width: 40%;
+            height: 60px;
+            display: none;
+            justify-content: flex-end;
+            flex-direction: row;
+          }
+          .user-menu-item {
+            background-color: lightskyblue;
+            opacity: 0.8;
+            border: 1px black solid;
+            border-radius: 5px;
+            width: 41%;
+            background-repeat: no-repeat;
+            background-position: right;
+            background-size: 38% 55%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+          }
+        }
       }
     }
-  }
-
-  .card-big-table {
-    @include setwidthandheight(90%, 90%);
-    @include setborderwithradius(unset, 3%);
-    overflow-y: scroll;
-
-    &::-webkit-scrollbar {
-      @include setwidthandheight(12px, unset);
-    }
-
-    &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-      @include setborderwithradius(unset, 10px);
-    }
-
-    &::-webkit-scrollbar-thumb {
-      @include setborderwithradius(unset, 10px);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    }
-
-    .track {
-      @include flexeddiv(row, space-between);
-      padding: 10px 20px;
-      border-bottom: 1px solid;
-
-      .track-info {
-        @include flexeddiv(column, space-around);
-      }
-
-      .track-duration {
-        vertical-align: middle;
-        border-radius: 100%;
-      }
-    }
-  }
-}
-.user {
-  &.admin {
-    color: blue;
-  }
-  &.subscribed {
-    color: green;
-  }
-}
-
-/*.user-menu {
-  width: 40%;
-  height: 60px;
-  display: none;
-  justify-content: flex-end;
-  flex-direction: row;
-  
-}
-.user-menu-item {
-  background-color: lightskyblue;
-  opacity: 0.8;
-  border: 1px black solid;
-  border-radius: 5px;
-  width: 41%;
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 38% 55%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-*/
-.user-item {
-  @include flexeddiv(row, space-between);
-  padding: 10px 20px;
-  border-bottom: 1px solid;
-  cursor: pointer;
-  height: 60px;
-
-  &:hover {
-    background-color: rgb(248, 196, 176);
-  }
-
-  .user-info {
-    @include flexeddiv(column, space-around);
-  }
-
-  .user-duration {
-    width: 25%;
-    text-align: right;
-    vertical-align: middle;
-    border-radius: 100%;
-  }
-
-  &:hover {
-    .user-menu {
-      display: flex;
-    }
-    .user-duration {
-      display: none;
-    }
-  }
-
-  .user-menu {
-    width: 40%;
-    height: 60px;
-    display: none;
-    justify-content: flex-end;
-    flex-direction: row;
-  }
-  .user-menu-item {
-    background-color: lightskyblue;
-    opacity: 0.8;
-    border: 1px black solid;
-    border-radius: 5px;
-    width: 41%;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size: 38% 55%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
   }
 }
