changed styles, made player render only when logged in

--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -1,9 +1,10 @@
 .header {
-  height: 50%;
+  height: 7vh;
   width: 100%;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid black;
+  background-color: linen;
 
   .header-logo {
     padding: 0 25px;
