--- a/client/src/components/player/player.styles.scss
+++ b/client/src/components/player/player.styles.scss
@@ -1,7 +1,22 @@
+@mixin animation($type, $sec) {
+  -webkit-transition: $type $sec ease-out;
+  -moz-transition: $type $sec ease-out;
+  -o-transition: $type $sec ease-out;
+  -ms-transition: $type $sec ease-out;
+  transition: $type $sec ease-out;
+}
+
 .player-container {
+  width: 0;
   height: 58%;
-  width: 100%;
-  border-bottom: 1px solid black;
+  //border-bottom: 0px solid black;
+  @include animation(all, 1s);
+
+  .rhap_container {
+    width: 0;
+    padding: 0;
+    @include animation(all, 1s);
+  }
 
   .player {
     height: 100%;
@@ -13,6 +28,15 @@
       width: 100%;
       margin: auto 0;
       outline: none;
+    }
+  }
+
+  &.opened {
+    width: 100%;
+
+    .rhap_container {
+      width: 100%;
+      padding: 10px 15px;
     }
   }
 }
