--- a/client/src/components/custombutton/custombutton.styles.scss
+++ b/client/src/components/custombutton/custombutton.styles.scss
@@ -1,9 +1,11 @@
 .custombutton {
-  min-width: 165px;
+  //min-width: 165px;
   width: 100%;
-  height: 50px;
+  //height: 50px;
   letter-spacing: 0.5px;
-  line-height: 50px;
+  //line-height: 50px;
+  height: 30px;
+  line-height: 30px;
   padding: 0 35px 0 35px;
   font-size: 11px;
   background-color: orange;
