--- a/client/src/components/profile/profile.styles.scss
+++ b/client/src/components/profile/profile.styles.scss
@@ -66,7 +66,8 @@
   cursor: default;
   @include animation(all, 1.4s);
   overflow: hidden;
-  height: 85px;
+  //height: 85px;
+  height: 12vh;
   cursor: pointer;
 
   &.minified {
