--- a/client/src/components/profile/profile.styles.scss
+++ b/client/src/components/profile/profile.styles.scss
@@ -82,7 +82,7 @@
     @include setwidthandheight(32px, 32px);
     margin-top: 0;
     right: 10px;
-    margin-right: 20vw;
+    margin-right: 12%;
     z-index: 0;
     border-radius: 9px;
   }
