--- a/client/src/components/mainmenu/mainmenu.styles.scss
+++ b/client/src/components/mainmenu/mainmenu.styles.scss
@@ -35,19 +35,21 @@
 
     .card {
       @include setwidthandheight(40%, 100%);
-      background-color: lightskyblue;
+      @include animation(all, 0.8s);
+      //background-color: #9b3f9b;
       z-index: 3;
       vertical-align: middle;
-      @include setborderwithradius(2px solid black, 30px);
+      @include setborderwithradius(2px solid white, 30px);
 
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 70%;
+      background-size: 55%;
       cursor: pointer;
-      @include animation(background-color, 0.5s);
 
       &:hover {
-        background-color: rgb(212, 237, 253);
+        //background-color: rgb(212, 237, 253);
+        @include setborderwithradius(2px solid pink, 30px);
+        box-shadow: 0 0 5px pink, 0 0 25px pink, 0 0 50px pink, 0 0 100px pink;
       }
     }
   }
