--- a/client/src/components/card-ai/card-ai.styles.scss
+++ b/client/src/components/card-ai/card-ai.styles.scss
@@ -16,11 +16,12 @@
 
 .card-ai {
   @include setwidthandheight(100%, 100%);
-  background-color: lightskyblue;
-  @include setborderwithradius(2px solid black, 52px);
+  @include setborderwithradius(2px solid #609ae4, 52px);
+  background-color: #151527;
   @include flexeddiv(column, space-around);
 
   .card-ai-switch {
     @include flexeddiv(row, space-evenly);
+    color: #94dadc;
   }
 }
