--- a/client/src/components/card-playlist/card-playlist.styles.scss
+++ b/client/src/components/card-playlist/card-playlist.styles.scss
@@ -24,28 +24,31 @@
 
 .card-playlist {
   @include setwidthandheight(100%, 100%);
-  background-color: lightsalmon;
-  @include setborderwithradius(2px solid black, 52px);
+  background-color: #151527;
+  @include setborderwithradius(2px solid #609ae4, 52px);
   @include flexeddiv(unset, center);
   align-items: center;
 
   .card-big-table {
     @include setwidthandheight(90%, 90%);
     @include setborderwithradius(unset, 3%);
-    overflow-y: scroll;
+    overflow-y: auto;
+    color: white;
 
     &::-webkit-scrollbar {
       @include setwidthandheight(12px, unset);
     }
 
     &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+      -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
       @include setborderwithradius(unset, 10px);
     }
 
     &::-webkit-scrollbar-thumb {
+      box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
+      -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
       @include setborderwithradius(unset, 10px);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
   }
 }
