--- a/client/src/components/card-profile/card-profile.styles.scss
+++ b/client/src/components/card-profile/card-profile.styles.scss
@@ -23,18 +23,18 @@
 }
 
 .card-profile {
-  @include setwidthandheight(70vw, 75vh);
-  @include setborderwithradius(2px solid black, 52px);
+  @include setwidthandheight(45vw, 75vh);
+  @include setborderwithradius(2px solid #609ae4, 52px);
   @include flexeddiv(row, center);
   @include animation(left, 2s);
-  background-color: rgb(115, 107, 235);
+  background-color: #151527;
   position: absolute;
   top: 20%;
   left: -100%;
 
   .card-profile-main {
     @include flexeddiv(column, space-evenly);
-    @include setwidthandheight(70%, 100%);
+    @include setwidthandheight(90%, 100%);
 
     .card-profile-image {
       width: 130px;
@@ -50,8 +50,30 @@
 
     .profile-info-main {
       @include flexeddiv(column, space-around);
-      height: 75%;
+      height: 100%;
       text-align: center;
+
+      .profile-info-main-columns {
+        @include flexeddiv(row, space-evenly);
+        height: 100%;
+
+        .forminput.file {
+          margin: 0;
+        }
+      }
+
+      .subscription-container {
+        height: 100%;
+        @include flexeddiv(row, center);
+
+        .subscription {
+          width: 60%;
+
+          .custombutton {
+            margin: 8px 0 10px 0;
+          }
+        }
+      }
     }
 
     .forminput {
@@ -59,7 +81,7 @@
     }
 
     .custombutton {
-      margin-bottom: 10px;
+      margin: 16px 0;
     }
   }
 
