--- a/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
+++ b/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
@@ -23,17 +23,18 @@
 }
 
 .card-radio-playlist {
-  @include setwidthandheight(100%, 97%);
-  background-color: lightsalmon;
-  @include setborderwithradius(2px solid black, 30px);
+  @include setwidthandheight(100%, 90%);
+  background-color: #151527;
+  @include setborderwithradius(2px solid #94dadc, 30px);
   @include flexeddiv(unset, center);
   align-items: center;
   margin: 28px 5px 0 2.5px;
+  color: white;
 
   .card-big-table {
     @include setwidthandheight(90%, 90%);
     @include setborderwithradius(unset, 3%);
-    overflow-y: scroll;
+    overflow-y: auto;
 
     &::-webkit-scrollbar {
       @include setwidthandheight(12px, unset);
