--- a/client/src/components/card-userlist/card-userlist.styles.scss
+++ b/client/src/components/card-userlist/card-userlist.styles.scss
@@ -32,18 +32,16 @@
 
 .card-userlist {
   @include setwidthandheight(100%, 100%);
-  background-color: lightsalmon;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  border-radius: 52px;
+  background-color: #151527;
+  @include setborderwithradius(2px solid #609ae4, 52px);
   @include flexeddiv(column, flex-start);
   align-items: center;
-  @include animation(all, 5s);
+  @include animation(all, 2s);
 
   .placeholder {
     width: 100%;
     height: 46%;
-    @include animation(all, 5s);
+    @include animation(all, 2s);
   }
 
   &.searched {
@@ -56,12 +54,12 @@
 
     .searchbar {
       @include setwidthandheight(100%, 8%);
-      @include animation(all, 2.5s);
+      @include animation(all, 1s);
       border-radius: 0;
-      border-top: 0px solid black;
-      border-left: 0px solid black;
-      border-right: 0px solid black;
-      border-bottom: 2px solid black;
+      border-top: 0px solid #609ae4;
+      border-left: 0px solid #609ae4;
+      border-right: 0px solid #609ae4;
+      border-bottom: 2px solid #609ae4;
 
       .searchbar-image {
         margin-left: 3%;
@@ -72,6 +70,7 @@
 
         input {
           width: 90%;
+          color: #609ae4;
         }
       }
     }
@@ -80,17 +79,17 @@
   .searchbar {
     width: 90%;
     height: 50px;
-    border: 2px black solid;
+    border: 2px #609ae4 solid;
     border-radius: 15px;
     text-align: center;
     display: flex;
-    @include animationwithdelay(all, 2.5s, 0.5s);
+    @include animationwithdelay(all, 1s, 0.5s);
 
     .searchbar-image {
       height: 100%;
       width: 20%;
-      border-right: 1px solid black;
-      @include animation(all, 5s);
+      border-right: 1px solid #609ae4;
+      @include animation(all, 2s);
       -webkit-appearance: div;
       -moz-appearance: div;
       appearance: div;
@@ -111,9 +110,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      @include animation(all, 5s);
+      @include animation(all, 2s);
 
       input {
+        color: #609ae4;
         width: 90%;
         height: 65%;
         border: 0;
@@ -127,11 +127,11 @@
   .searchlist {
     width: 100%;
     height: 0;
-    @include animation(all, 2s);
+    @include animation(all, 1s);
 
     &.searched {
       height: 100%;
-      @include animation(all, 2s);
+      @include animation(all, 1s);
 
       .searchlist-buttons {
         display: flex;
@@ -141,16 +141,15 @@
     .searchlist-buttons {
       width: 100%;
       height: 10%;
-      border-bottom: black solid 2px;
+      border-bottom: #609ae4 solid 2px;
       display: none;
       justify-content: space-around;
+      color: white;
 
       .button {
-        background-color: cadetblue;
         width: 80px;
         cursor: pointer;
         margin: 5px 0px;
-        border: black solid 2px;
         border-radius: 8px;
         align-items: center;
         display: flex;
@@ -158,20 +157,23 @@
         justify-content: center;
 
         &:hover {
-          background-color: lightblue;
+          color: pink;
         }
 
         &.selected {
-          background-color: blue;
+          color: pink;
+          font-weight: bold;
         }
       }
     }
     .searchlist-list {
       width: 100%;
       height: 90%;
+      color: white;
 
       .searchlist-users {
-        overflow-y: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
         margin: 10px 0px;
         height: 80%;
 
@@ -180,13 +182,15 @@
         }
 
         &::-webkit-scrollbar-track {
-          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+          -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
           @include setborderwithradius(unset, 10px);
         }
 
         &::-webkit-scrollbar-thumb {
+          box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
+          -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
           @include setborderwithradius(unset, 10px);
-          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
         }
 
         .user-item {
@@ -197,17 +201,18 @@
           height: 60px;
 
           &:hover {
-            background-color: rgb(248, 196, 176);
+            background-color: #609ae4;
           }
 
           .user-info {
             @include flexeddiv(column, space-around);
+            width: 40%;
             .user {
               &.admin {
-                color: blue;
+                color: pink;
               }
               &.subscribed {
-                color: green;
+                color: #94dadc;
               }
             }
           }
@@ -234,13 +239,14 @@
             display: none;
             justify-content: flex-end;
             flex-direction: row;
+            color: black;
           }
           .user-menu-item {
             background-color: lightskyblue;
             opacity: 0.8;
             border: 1px black solid;
             border-radius: 5px;
-            width: 41%;
+            width: 75px;
             background-repeat: no-repeat;
             background-position: right;
             background-size: 38% 55%;
