--- a/client/src/components/forminputs/forminput.styles.scss
+++ b/client/src/components/forminputs/forminput.styles.scss
@@ -1,10 +1,11 @@
 $sub-color: black;
 $main-color: black;
+$shrink-color: #94dadc;
 
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $main-color;
+  color: $shrink-color;
 }
 
 .group {
@@ -34,6 +35,7 @@ $main-color: black;
       &:disabled {
         background-color: transparent;
         border: none;
+        color: #609ae4;
       }
     }
 
