--- a/client/src/components/profile/profile.styles.scss
+++ b/client/src/components/profile/profile.styles.scss
@@ -98,5 +98,9 @@
     margin-right: 15%;
     z-index: 0;
     border-radius: 9px;
+
+    @media screen and (orientation: portrait) {
+      right: 18%;
+    }
   }
 }
