--- a/client/src/components/shared/notification/notification.styles.scss
+++ b/client/src/components/shared/notification/notification.styles.scss
@@ -60,5 +60,9 @@
     &.success {
       background-color: #04aa6d;
     }
+
+    @media screen and (orientation: portrait) {
+      min-width: 80px;
+    }
   }
 }
