--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -57,6 +57,10 @@
             .card-big-primary,
             .card-big-secondary {
               @include setwidthandheight(30%, 55%);
+
+              @media screen and (orientation: portrait) {
+                width: 70%;
+              }
             }
           }
 
@@ -72,6 +76,14 @@
             }
           }
         }
+
+        @media screen and (orientation: portrait) {
+          @include setwidthandheight(100%, 100%);
+        }
+      }
+
+      @media screen and (orientation: portrait) {
+        padding: 15% 0;
       }
     }
 
@@ -85,6 +97,10 @@
         background-color: lightsteelblue;
         @include setwidthandheight(unset, 50%);
         @include setborderwithradius(1px solid black, 8px);
+      }
+
+      @media screen and (orientation: portrait) {
+        width: 30%;
       }
     }
   }
